[package]
name = "mikado"
version = "0.1.0"
authors = ["Ben Brittain <ben@brittain.org>"]
edition = "2018"

[profile.dev]
debug-assertions = false
overflow-checks = false

[build-dependencies]
cc = "1.0.37"

[dependencies]
bitfield = { path = "src/bitfield" }
bitfield-impl = { path = "src/bitfield/impl" }
spin = "0.4.8"
pin-utils = "0.1.0-alpha"
